--- a/GeriatricHelper/CGAGuideAreaTableViewCell.xib
+++ b/GeriatricHelper/CGAGuideAreaTableViewCell.xib
@@ -13,45 +13,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="113" id="rIF-vy-Ce7" customClass="CGAGuideAreaTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="rIF-vy-Ce7" customClass="CGAGuideAreaTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="rIF-vy-Ce7" id="MYK-zF-812">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="112.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rIF-vy-Ce7" id="MYK-zF-812">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="103.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wO-tO-KdU">
-                        <rect key="frame" x="8" y="9" width="60" height="61"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0wO-tO-KdU">
+                        <rect key="frame" x="8" y="9" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="KZw-bT-fmP"/>
                             <constraint firstAttribute="height" constant="60" id="viV-Vw-hhE"/>
                             <constraint firstAttribute="width" secondItem="0wO-tO-KdU" secondAttribute="height" multiplier="1:1" id="yCL-Wp-2AX"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Area name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuy-jX-7lf">
-                        <rect key="frame" x="75" y="23" width="229" height="33"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Area name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuy-jX-7lf">
+                        <rect key="frame" x="75" y="29.5" width="229" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NrM-ZJ-iUe">
-                        <rect key="frame" x="8" y="77" width="296" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NrM-ZJ-iUe">
+                        <rect key="frame" x="8" y="77" width="296" height="10.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="iuy-jX-7lf" firstAttribute="centerY" secondItem="0wO-tO-KdU" secondAttribute="centerY" id="1Bk-g4-eJH"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="iuy-jX-7lf" secondAttribute="trailing" constant="8" id="9e7-dy-InX"/>
-                    <constraint firstItem="iuy-jX-7lf" firstAttribute="leading" secondItem="0wO-tO-KdU" secondAttribute="trailing" constant="7.5" id="EG8-I4-hNJ"/>
-                    <constraint firstItem="0wO-tO-KdU" firstAttribute="top" secondItem="MYK-zF-812" secondAttribute="top" constant="8" id="Ecc-BX-b9L"/>
-                    <constraint firstItem="iuy-jX-7lf" firstAttribute="top" secondItem="MYK-zF-812" secondAttribute="top" constant="23" id="GMN-hg-UQR"/>
-                    <constraint firstAttribute="bottom" secondItem="iuy-jX-7lf" secondAttribute="bottom" constant="68" id="TGe-cE-lEF"/>
-                    <constraint firstItem="NrM-ZJ-iUe" firstAttribute="leading" secondItem="MYK-zF-812" secondAttribute="leading" constant="8" id="TNm-BY-zMX"/>
-                    <constraint firstItem="0wO-tO-KdU" firstAttribute="leading" secondItem="MYK-zF-812" secondAttribute="leading" constant="8" id="fw4-Gr-bii"/>
-                    <constraint firstItem="NrM-ZJ-iUe" firstAttribute="top" secondItem="0wO-tO-KdU" secondAttribute="bottom" constant="8" id="pB0-3P-2nJ"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="NrM-ZJ-iUe" secondAttribute="trailing" constant="8" id="t4X-tz-fCZ"/>
+                    <constraint firstItem="iuy-jX-7lf" firstAttribute="centerY" secondItem="0wO-tO-KdU" secondAttribute="centerY" id="19Y-am-Pjg"/>
+                    <constraint firstItem="NrM-ZJ-iUe" firstAttribute="top" secondItem="0wO-tO-KdU" secondAttribute="bottom" constant="8" id="Ehb-05-uxR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="NrM-ZJ-iUe" secondAttribute="bottom" constant="8" id="ElF-BN-xtQ"/>
+                    <constraint firstItem="NrM-ZJ-iUe" firstAttribute="leading" secondItem="MYK-zF-812" secondAttribute="leading" constant="8" id="HgU-fs-2jO"/>
+                    <constraint firstAttribute="trailing" secondItem="NrM-ZJ-iUe" secondAttribute="trailing" constant="16" id="J1c-q2-DJe"/>
+                    <constraint firstItem="0wO-tO-KdU" firstAttribute="leading" secondItem="MYK-zF-812" secondAttribute="leading" constant="8" id="RIb-a9-1sO"/>
+                    <constraint firstAttribute="trailing" secondItem="iuy-jX-7lf" secondAttribute="trailing" constant="16" id="kDi-UM-Pxg"/>
+                    <constraint firstItem="iuy-jX-7lf" firstAttribute="leading" secondItem="0wO-tO-KdU" secondAttribute="trailing" constant="7" id="ln7-RZ-SS2"/>
+                    <constraint firstItem="0wO-tO-KdU" firstAttribute="top" secondItem="MYK-zF-812" secondAttribute="top" constant="9" id="tlP-8U-1Ic"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -59,7 +58,7 @@
                 <outlet property="areaIcon" destination="0wO-tO-KdU" id="4SM-BL-Uqa"/>
                 <outlet property="areaLabel" destination="iuy-jX-7lf" id="h8m-kT-zZS"/>
             </connections>
-            <point key="canvasLocation" x="-356" y="4.5"/>
+            <point key="canvasLocation" x="-356" y="0.0"/>
         </tableViewCell>
     </objects>
 </document>
