--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -72,11 +72,22 @@
                         <segue destination="HZw-ZX-5Jx" kind="relationship" relationship="viewControllers" id="Jiz-Vq-dY3"/>
                         <segue destination="6JO-WD-3s3" kind="relationship" relationship="viewControllers" id="ECV-rY-VHf"/>
                         <segue destination="UO9-3S-htB" kind="relationship" relationship="viewControllers" id="24Z-B8-JKP"/>
+                        <segue destination="GKn-Dh-ZyD" kind="relationship" relationship="viewControllers" id="269-Yd-J6c"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6NG-Ba-U4e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3015" y="-382"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="9F6-8b-2GI">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="About" id="GKn-Dh-ZyD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="seG-Nk-cme"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dOD-qC-MmP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2948" y="-1183"/>
         </scene>
         <!--CGAGuide-->
         <scene sceneID="x6l-Vk-bsz">
